...
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <CheckBox
                android:id="@+id/payment_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/mark_as_completed"/>

            <ImageButton
                android:id="@+id/btn_edit"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Edit payment"
                android:padding="12dp"
                android:src="@drawable/ic_edit"
...
