<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_summary"
            android:title="Summary" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="Categories" />
        <item
            android:id="@+id/nav_self_transfer"
            android:icon="@drawable/ic_transfer"
            android:title="Self Transfer" />
        <item
            android:id="@+id/nav_recurring_payments"
            android:icon="@drawable/ic_recurring"
            android:title="@string/recurring_payments" />
        <item
            android:id="@+id/nav_sms_scan"
            android:icon="@drawable/ic_sms"
            android:title="Scan SMS" />
        <item
            android:id="@+id/nav_regex_patterns"
            android:icon="@drawable/ic_sms"
            android:title="SMS Patterns" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="Settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="About" />
    </group>
</menu>